# resonix

./: 1.main.js  235.main.js  Cargo.toml  README.md  TODOS.md  main.js  main.wasm
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  demos.yml  miri.yml  tests.yml
audio/: Cargo.toml
audio/src/: downmix.rs  downmixers.rs  grain.rs  granular_synthesizer.rs  granular_synthesizer_action.rs  int_map.rs  int_set.rs  lib.rs  min.rs  mixdown.rs  num_channels.rs  utils.rs
audio/src/downmixers/: downmix_panning.rs  downmix_panning_fast.rs  downmix_simple.rs
audio/src/envelopes/: envelope.rs  sine_envelope.rs
audio/src/granular_synthesizer/: granular_synthesizer_grain.rs
audio/src/int_map/: int_map_index.rs  int_map_struct.rs
audio/src/int_set/: int_set_struct.rs
audio/src/utils/: max.rs  num_channels.rs  percentage.rs
audio_common/: Cargo.toml
audio_common/src/: grain.rs  granular_synthesizer.rs  granular_synthesizer_action.rs  lib.rs  max.rs  min.rs  mixdown.rs  percentage.rs
audio_web/: Cargo.toml  build.rs  package.json  style.scss  webpack.config.js
audio_web/src/: audio.rs  components.rs  icons.rs  lib.rs  utils.rs
audio_web/src/audio/: audio_ouput_handle.rs  audio_recorder_handle.rs  buffer_selection_action.rs  decode.rs  density.rs  density_action.rs  density_handle.rs  gain_action.rs  global_defaults.rs  grain_len_handle.rs  granular_synthesizer_handle.rs  initialize.rs  play_status.rs  play_status_action.rs  play_status_handle.rs  refresh_interval_handle.rs  stream_handle.rs
audio_web/src/components/: app.rs  audio_output_visualization.rs  audio_output_visualization.scss  buffer_container.rs  buffer_container.scss  buffer_sample_bars.rs  buffer_sample_bars.scss  buffer_sample_bars_canvas.rs  button.rs  (+22 more)
audio_web/static/: index.html
cli/: Cargo.toml  README.md
cli/src/: main.rs
common/: Cargo.toml
common/src/: decode.rs  grain.rs  grain_sample.rs  granular_synthesizer.rs  granular_synthesizer_action.rs  lib.rs  mixdown.rs  utils.rs
crates/resonix/: Cargo.toml
crates/resonix/src/: amplitude.rs  audio_context.rs  connect.rs  connection.rs  constant_node.rs  dac.rs  decibel.rs  edge.rs  envelopes.rs  lib.rs  multiply_node.rs  node.rs  node_type.rs  pass_through.rs  pass_through_node.rs  record.rs  record_node.rs  sine.rs  utils.rs
crates/resonix/src/audio_out/: audio_out_config.rs  audio_out_context.rs  audio_out_struct.rs
crates/resonix/src/dac/: dac_config.rs  dac_node.rs  dac_struct.rs  data_from_dac_config.rs  write_frame_to_buffer.rs
crates/resonix/src/granular_synthesizer/: granular_synthesizer_action.rs
crates/resonix/src/sine/: sine_node.rs  sine_struct.rs
crates/resonix/src/utils/: lazy_cached.rs  sample_rate.rs
crates/resonix/tests/: audio_graph.rs
crates/resonix_core/: Cargo.toml
crates/resonix_core/src/: amplitude.rs  dac.rs  downmixers.rs  granular_synthesizer.rs  lib.rs  sine.rs  units.rs  utils.rs
crates/resonix_core/src/dac/: dac_struct.rs
crates/resonix_core/src/downmixers/: downmix_enum.rs  downmix_panning.rs  downmix_panning_fast.rs  downmix_simple.rs
crates/resonix_core/src/envelopes/: sine_envelope.rs
crates/resonix_core/src/granular_synthesizer/: granular_synthesizer_action.rs  granular_synthesizer_struct.rs
crates/resonix_core/src/sine/: sine_interface.rs  sine_struct.rs
crates/resonix_core/src/units/: decibel.rs  num_channels.rs  sample_rate.rs
crates/resonix_core/src/utils/: lazy_cached.rs
crates/resonix_dac/: Cargo.toml
crates/resonix_dac/src/: dac_config.rs  dac_config_mock.rs  dac_config_shared.rs  dac_struct.rs  lib.rs
crates/resonix_graph/: Cargo.toml
crates/resonix_graph/src/: audio_context.rs  connection.rs  graph.rs  lib.rs  message.rs  messages.rs  node_handle.rs  node_type.rs  nodes.rs  output_node.rs  processor.rs  traits.rs
crates/resonix_graph/src/nodes/: constant_node.rs  dac_node.rs  downmix_node.rs  granular_synthesizer_node.rs  multicore_node.rs  multiply_node.rs  pass_through_node.rs  record_node.rs  sine_node.rs
crates/resonix_graph/src/nodes/snapshots/: resonix_graph__nodes__downmix_node__test_multiply_node__should_downmix_multichannel_data.snap  resonix_graph__nodes__granular_synthesizer_node__test_constant_node__should_produce_granular_sounds_from_buffer.snap
crates/resonix_graph/src/processor/: processor_interface.rs  processor_struct.rs
crates/resonix_graph/src/traits/: add_to_context.rs  connect.rs  node.rs
crates/resonix_test_utils/: Cargo.toml
demos/audio_graph_cli/: Cargo.toml
demos/audio_graph_web/: Cargo.toml
demos/audio_graph_web/src/: app.rs  audio.rs  main.rs
demos/channels_test_cli/: Cargo.toml
demos/channels_test_cli/src/: main.rs
demos/channels_test_web/: Cargo.toml  index.html
demos/cli/: Cargo.toml
demos/concatenative_synthesizer_web/: Cargo.toml  README.MD  index.html
demos/granular_synthesizer/: Cargo.toml  build.rs  package-lock.json  package.json  webpack.config.js
demos/granular_synthesizer_bevy/: Cargo.toml  README.md
demos/granular_synthesizer_bevy/.cargo/: config.toml
demos/granular_synthesizer_bevy/src/: main.rs
demos/granular_synthesizer_cli/: Cargo.toml
demos/granular_synthesizer_cli/src/: main.rs
demos/granular_synthesizer_web/: Cargo.toml  build.rs  package.json  style.scss  webpack.config.js
demos/sine_web/: Cargo.toml  README.MD
demos/wide_audio_graph_cli/: Cargo.toml
native/: README.md  package-lock.json  package.json
native/native_common/: Cargo.toml
native/src-tauri/: Cargo.toml  tauri.conf.json
native/src-tauri/src/: main.rs
native/src-ui/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
resonix/: Cargo.toml
resonix/src/: amplitude.rs  audio_out.rs  audio_player.rs  concatenative_synthesizer.rs  lib.rs  sine.rs  utils.rs
src/: clock.rs  main.rs
web/: Cargo.toml  build.rs  index.js  style.scss  webpack.config.js
web-yew/: Cargo.toml  README.md  package-lock.json  webpack.config.js
web-yew/src/: components.rs  lib.rs
web-yew/static/: index.html
web/src/: audio.rs  components.rs  icons.rs  lib.rs  state.rs
web/static/: index.html
(+222 files in other folders)
