[package]
name = "resonix"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resonix_core = { path = "../resonix_core" }
resonix_graph = { path = "../resonix_graph" }
cpal = { version = "0.13.5", optional = true }

[features]
# only need cpal when using audio-out (DAC) features
cpal = ["dep:cpal", "resonix_core/cpal", "resonix_graph/cpal"]


