[package]
name = "resonix"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resonix_core = { path = "../resonix_core" }
resonix_graph = { path = "../resonix_graph" }
resonix_dac = { path = "../resonix_dac", optional = true}
cpal = { version = "0.13.5", optional = true }

[features]
# only need cpal when using audio-out (DAC) features
dac = ["dep:cpal", "dep:resonix_dac", "resonix_graph/dac", "resonix_core/dac"]

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
resonix_dac = { path = "../resonix_dac", features = ["mock_dac"]}
resonix_graph = { path = "../resonix_graph", features = ["mock_dac"]}
