[package]
name = "resonix"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resonix_core = { path = "../resonix_core" }
resonix_graph = { path = "../resonix_graph" }
resonix_dac = { path = "../resonix_dac", optional = true}
cpal = { version = "0.13.5", optional = true }

[features]
# enables DAC-related functions--only need cpal when using audio-out (DAC) features
dac = ["dep:cpal", "dep:resonix_dac", "resonix_graph/dac", "resonix_core/dac"]
# enables mocking DAC-related functionality in tests
mock_dac = ["resonix_dac?/mock_dac", "resonix_graph/mock_dac"]

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"]}
# resonix_dac = { path = "../resonix_dac", features = ["mock_dac"]}
# resonix_graph = { path = "../resonix_graph", features = ["dac", "mock_dac"]}
# resonix_core = { path = "../resonix_core", features = ["dac"]}
# cpal = { version = "0.13.5" }
