[package]
name = "resonix_core"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"]}
nohash-hasher = "0.2.0"
log = "0.4"

# WASM-ONLY dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# enabling "js" tells `getrandom` that `rand` should compile with wasm/js features enabled
getrandom = { version = "0.2.6", features = ["js"] }
# only need wasm-bindgen when compiling for wasm32
cpal = { version = "0.13.5", features = ["wasm-bindgen"], optional = true }

# NATIVE-ONLY dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm-logger = "0.2.0"
cpal = { version = "0.13.5", optional = true}

[dev-dependencies]
# async runtime only needed while testing
tokio = { version = "1.28.1", features = ["full"] }
resonix_test_utils = { path = "../resonix_test_utils"}

[features]
# only need cpal when using audio-out (DAC) features
dac = ["dep:cpal"]


[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]