[package]
name = "resonix_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.11"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
petgraph = "0.6.3"
thiserror = "1.0.40"
resonix_core = { path = "../resonix_core" }
resonix_dac = { path = "../resonix_dac", optional = true }
log = "0.4"
async-channel = "1.8.0"
nohash-hasher = "0.2.0"

# WASM-ONLY dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# only need wasm-bindgen when compiling for wasm32
cpal = { version = "0.13.5", features = ["wasm-bindgen"], optional = true }

# NATIVE-ONLY dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.13.5", optional = true }

[features]
# only need cpal when using audio-out (DAC) features
dac = ["dep:cpal", "dep:resonix_dac"]
mock_dac = ["resonix_dac?/mock_dac"]

[dev-dependencies]
# see https://insta.rs/docs/quickstart/
insta = { version = "1.30.0", features = ["yaml"] }
tokio = { version = "1.28.2", features = ["full"]}

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3