[package]
name = "audio-graph-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.3.0", features = ["stable"] }
resonix = { path = "../../crates/resonix", features = ["dac"]}

# logging
log = "0.4"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"