[package]
name = "channels_test_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resonix = { path = "../../crates/resonix", features = ["dac"]}
tokio = { version = "1.28.1", features = ["full"] }