[package]
name = "granular_synthesizer_bevy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
futures = { version = "0.3.28", features = ["executor"] }
bevy = "0.10.1"
resonix = { path = "../../resonix", features = ["cpal"]}
rodio = "0.15.0"
