[package]
name = "granular_synthesizer_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
rand = "0.8.5"
rodio = "0.15.0"
cpal = "0.13.5"
anyhow = "1.0.57"
clap = "3.1.18"
# Wrapper around the C library
minimp3 = "0.5.1"
resonix = { path = "../../resonix"}
