[package]
name = "granular_synthesizer_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
rodio = "0.15.0"
resonix = { path = "../../crates/resonix", features = ["dac"]}
